@@ -1,3 +1,7 @@
+2008-03-22  Philippe Brochard  <hocwp@free.fr>
+
+	* src/clfswm-pack.lisp (explode-group/explode-current-group): new functions.
+
 2008-03-21  Philippe Brochard  <hocwp@free.fr>
 
 	* src/clfswm-pack.lisp: Pack, Fill, Resize functions.
